# flask-sourcebase

./: .pre-commit-config.yaml  app.py  pyproject.toml  requirements.txt
docker/: docker-compose-local.yaml
migrations/versions/: 4a1261a71dba_create_user_table.py
src/: __init__.py
src/apis/v1/: __init__.py  auth.py
src/commons/database/: __init__.py
src/dtos/responses/: default_response.py
src/models/: base_model.py  user.py
src/services/: auth_service.py
src/settings/: settings.py  stg_settings.py
