[tool.poetry]
name = "flask-sourcebase"
version = "0.1.0"
description = ""
authors = ["500ping"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flasgger = "^0.9.7.1"
pre-commit = "^3.7.1"
flask-pydantic = "^0.12.0"
pydantic-settings = "^2.3.1"
sqlalchemy = "^2.0.30"
flask-alembic = "^3.0.1"
flask-migrate = "^4.0.7"
pymysql = "^1.1.1"
flask-jwt-extended = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
